<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="28dp"
    android:paddingEnd="28dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="36dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/template_qr"
            /> <!-- placeholder image -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/roundedcornerwhite"
                android:paddingStart="16dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:fontFamily="@font/metropolis_semibold"
                    android:hint="@string/url"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/downloadButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/roundedcornerblues"
            android:text="@string/download"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/metropolis_semibold"
            android:textSize="16sp"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="14dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/roundedcornerwhite"
            android:text="@string/share"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:fontFamily="@font/metropolis_semibold"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    </LinearLayout>


</LinearLayout>