<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f7f7f7"
    android:padding="2dp"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:paddingTop="16dp"
        android:id="@+id/codeLl"
        android:orientation="vertical"
        android:background="@color/background"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_phone_icon"
                android:layout_width="87dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/qrimg"
                android:tint="@color/black"
                app:layout_constraintHorizontal_bias="0.36"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:textSize="23sp"
                android:text="@string/title_brand"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_phone_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                android:fontFamily="@font/metropolis_extrabold"
                android:background="@color/transparent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textVi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tagline"
            android:textColor="#808080"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/metropolis_medium" />

        <TextView
            android:id="@+id/contactdetails"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:text="@string/title_contact"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="@font/metropolis_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">
        <!-- CountryCodePicker -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@drawable/roundedcornerwhite"
                android:paddingStart="10dp"
                app:ccp_textGravity="CENTER"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoDetectLanguage="true"
                app:ccp_countryAutoDetectionPref="SIM_ONLY"
                app:ccp_defaultLanguage="ENGLISH"
                app:ccp_rememberLastSelection="true"
                app:ccp_showPhoneCode="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <!-- TextInputLayout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_phone_num"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusedByDefault="false"
                android:background="@drawable/roundedcornerwhite"
                android:hint="@string/phone_number"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ccp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/roundedcornerwhite"
                    android:elevation="10dp"
                    android:ems="10"
                    android:inputType="phone|number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:orientation="vertical"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_otp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/generate_otp"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/metropolis_semibold"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:background="@drawable/roundedcornerblues"
            android:backgroundTint="@color/primary"
            app:strokeColor="@color/primary"
            app:strokeWidth="2dp"
            app:cornerRadius="14dp">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_otp"
            android:layout_width="match_parent"
            android:layout_marginTop="22dp"
            android:layout_height="45dp"
            android:background="@drawable/roundedcornerwhite"
            android:text="@string/skip_reg"
            android:fontFamily="@font/metropolis_semibold"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textAllCaps="false"
            >

        </com.google.android.material.button.MaterialButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="@font/metropolis_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/roundedcornerwhite"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:fontFamily="@font/metropolis_semibold"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/roundedcornerblues"
            android:text="Verify"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/metropolis_semibold"
            android:textSize="16sp"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="6dp"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="14dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/roundedcornerwhite"
            android:text="Cancel"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:fontFamily="@font/metropolis_semibold"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>