<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f7f7f7"
    android:padding="2dp"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:paddingTop="16dp"
        android:id="@+id/codeLl"
        android:orientation="vertical"
        android:background="@color/background"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_phone_icon"
                android:layout_width="87dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/qrimg"
                android:tint="@color/black"
                app:layout_constraintHorizontal_bias="0.36"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:textSize="23sp"
                android:text="@string/title_brand"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_phone_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                android:fontFamily="@font/metropolis_extrabold"
                android:background="@color/transparent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textVi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tagline"
            android:textColor="#808080"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/metropolis_medium" />

        <TextView
            android:id="@+id/contactdetails"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:text="@string/title_contact"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="@font/metropolis_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/background"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">
        <!-- CountryCodePicker -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:background="@drawable/roundedcornerwhite"
                android:paddingStart="10dp"
                app:ccp_textGravity="CENTER"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoDetectLanguage="true"
                android:layout_marginEnd="8dp"
                app:ccp_countryAutoDetectionPref="SIM_ONLY"
                app:ccp_defaultLanguage="ENGLISH"
                app:ccp_rememberLastSelection="true"
                app:ccp_showPhoneCode="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <!-- TextInputLayout -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/roundedcornerwhite"
                android:layout_marginStart="8dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    >
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:orientation="vertical"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_get_otp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="14dp"
            android:layout_marginTop="24dp"
            android:textAllCaps="false"
            android:background="@drawable/roundedcornerblues"
            android:backgroundTint="@color/primary"
            >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/generate_otp"
                    android:textSize="16sp"
                    android:fontFamily="@font/metropolis_semibold"
                    android:textColor="@color/background"
                    android:textAlignment="center"
                    android:padding="11dp"
                    >
                </TextView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/skip_otp"
            android:layout_width="match_parent"
            android:layout_marginTop="22dp"
            android:layout_height="45dp"
            android:background="@drawable/roundedcornerwhite"
            app:cardCornerRadius="14dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            >
                <TextView
                    android:text="@string/skip_reg"
                    android:fontFamily="@font/metropolis_semibold"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:padding="11dp"
                    >

                </TextView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_authenticate_num"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="24dp"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="@font/metropolis_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/roundedcornerwhite"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            >
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_verify"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="10dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="14dp"
            android:background="@drawable/roundedcornerblues"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="6dp"
            android:layout_marginEnd="8dp">
            <TextView
                android:text="Verify"
                android:fontFamily="@font/metropolis_semibold"
                android:textColor="@color/background"
                android:textSize="16sp"
                android:padding="12dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="10dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="14dp"
            android:background="@drawable/roundedcornerblues"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="6dp"
            android:layout_marginStart="8dp">
            <TextView
                android:text="Cancel"
                android:fontFamily="@font/metropolis_semibold"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:padding="12dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>